objects/copado__Quality_Gate_Rule_Condition__c.object
<CustomObject>
    <fields>
        <fullName>copado__AcceptanceCriteria__c</fullName>
        <inlineHelpText>Requirements and thresholds that must be met to pass this quality gate successfully</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Actions__c</fullName>
        <description>Formula field to display parent Quality Gate Rule&apos;s Copado Actions in related lists.</description>
        <formula>copado__Quality_Gate_Rule__r.copado__ActionsList__c</formula>
        <label>Copado Actions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Environment where this Quality Gate Condition will be evaluated. If no Pipeline is defined, this Condition will apply to all Pipelines where this Environment is connected to.</inlineHelpText>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
        <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__ExecutionSequence__c</fullName>
        <description>Formula field to display parent Quality Gate Rule&apos;s Execution Sequence in related lists</description>
        <formula>TEXT(copado__Quality_Gate_Rule__r.copado__Execution_sequence__c)</formula>
        <label>Execution Sequence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Extension_Configuration__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Extension Configuration</label>
        <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
        <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
        <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Filter_Criteria__c</fullName>
        <inlineHelpText>Define a filter criteria to evaluate the condition only when the specified files are present in the configured Copado Action</inlineHelpText>
        <label>Filter Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Pipeline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pipeline where this Quality Gate Condition will be evaluated.</inlineHelpText>
        <label>Pipeline</label>
        <referenceTo>copado__Deployment_Flow__c</referenceTo>
        <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
        <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <label>Platform</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Quality_Gate_Rule__c</fullName>
        <label>Quality Gate Rule</label>
        <referenceTo>copado__Quality_Gate_Rule__c</referenceTo>
        <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
        <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Stage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Stage where this Quality Gate Condition will be evaluated. If no Pipeline is defined, this Condition will apply to all Pipelines where this Stage is connected to.</inlineHelpText>
        <label>Stage</label>
        <referenceTo>copado__Stage__c</referenceTo>
        <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
        <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>Formula field to display parent Quality Gate Rule&apos;s Status in related lists.</description>
        <formula>TEXT(copado__Quality_Gate_Rule__r.copado__Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Tests_From__c</fullName>
        <inlineHelpText>Select from where the tests to be executed as part of the Quality Gate are retrieved.</inlineHelpText>
        <label>Tests From</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Story</fullName>
                    <default>true</default>
                    <label>User Story</label>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Tool__c</fullName>
        <description>Formula field to display parent Quality Gate Rule&apos;s Tool in related lists.</description>
        <formula>TEXT(copado__Quality_Gate_Rule__r.copado__Tool__c)</formula>
        <label>Tool</label>
        <type>Text</type>
    </fields>
</CustomObject>